--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  
+  <script async defer src="http://maps.googleapis.com/maps/api/js?key=AIzaSyB6OktBOKr6jyThXCq7EZNfZop81VImSJs"></script>
+
 </head>
 <body>
   <app-root></app-root>
